--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
                         <!--
                         insert here
                         -->
+<article class="projects__card">
+
+                      <img src="http://drive.google.com/uc?export=view&id=18Ab7g5ouLvyC6PGPBcm6hKYSbchjZhq0" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Code #2</span>
+                                    
+                                    <h3 class="projects__title">Function that get the decimal value only</h3>
+                                    <a href="#" id="copyCode_two" class="projects__button button button__small">
+                                        <i class="ri-clipboard-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
                     </div>
 
                     <!--=============== SKILLS ===============-->
