--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
                     <!--=============== SKILLS ===============-->
                     <div class="skills__content grid" data-content id="skills">
                                 <!--insert for python-->
+<article class="projects__card">
+
+                            <img src="https://drive.google.com/file/d/183SanRn1GpduF-nf-yEy7cTL0uqcxr8e/view?usp=drivesdk" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Python Code #1</span>
+                                    
+                                    <h3 class="projects__title">Function that get the key using the value</h3>
+                                    <a href="#" id="python_code_one" class="projects__button button button__small">
+                                        <i class="ri-clipboard-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
                 </div>
             </section>
         </main>
