--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <!--insert for python-->
 <article class="projects__card">
 
-                            <img src="https://drive.google.com/file/d/183SanRn1GpduF-nf-yEy7cTL0uqcxr8e/view?usp=drivesdk" alt="" class="projects__img">
+                            <img src="http://drive.google.com/uc?export=view&id=183SanRn1GpduF-nf-yEy7cTL0uqcxr8e" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
