--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@
                                 </div>
                             </div>
                         </article>
+   <article class="projects__card">
+        <img src="http://drive.google.com/uc?export=view&id=19qi9YtVcwbhBA6TyzBu_m3Jt1917Z-uT" alt="" class="projects__img">
+        <div class="projects__modal">
+            <div>
+                <span class="projects__subtitle">Code #3</span>
+                
+                <h3 class="projects__title">Pointer-Based String Printing Function</h3>
+                <a href="#" id="C_3" class="projects__button button button__small">
+                    <i class="ri-clipboard-line"></i>
+                </a>
+            </div>
+        </div>
+    </article>
+
                     </div>
 
                     <!--=============== SKILLS ===============-->
