--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
         </div>
     </article>
 
+    <article class="projects__card">
+        <img src="http://drive.google.com/uc?export=view&id=1A1dUNjlMT2wcJI1-r1Tyyqp1HlUpMzC3" alt="" class="projects__img">
+        <div class="projects__modal">
+            <div>
+                <span class="projects__subtitle">Code #4</span>
+                
+                <h3 class="projects__title">Using pointers to copy a string to two character arrays and print them</h3>
+                <a href="#" id="C_4" class="projects__button button button__small">
+                    <i class="ri-clipboard-line"></i>
+                </a>
+            </div>
+        </div>
+    </article>
                     </div>
 
                     <!--=============== SKILLS ===============-->
