--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
             </div>
         </div>
     </article>
+   <article class="projects__card">
+        <img src="http://drive.google.com/uc?export=view&id=1AFevYEU0L4jRBP48hcPrP99fT4Qs1bI_" alt="" class="projects__img">
+        <div class="projects__modal">
+            <div>
+                <span class="projects__subtitle">Code #6</span>
+                <h3 class="projects__title">Print the name and GPA of an array of Students using a structure and for loop</h3>
+                <a href="#" id="C_6" class="projects__button button button__small">
+                    <i class="ri-clipboard-line"></i>
+                </a>
+            </div>
+        </div>
+    </article>
                     </div>
 
                     <!--=============== SKILLS ===============-->
